--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -435,6 +435,9 @@ services:
       - PORT=8080
       - PROMETHEUS_URL=${PROMETHEUS_HEALTCHECK_URL}
       - PROMETHEUS_PORT=${PROMETHEUS_HEALTHCHECK_PORT}
+      - NATS_ADDRESS=${NATS_HOSTNAME}:${NATS_PORT}
+      - MAGNETAR_ADDRESS=${MAGNETAR_HOSTNAME}:${MAGNETAR_PORT}
+      - CLUSTER_METRICS_PUB_INTERVAL=${CLUSTER_METRICS_PUB_INTERVAL}
     networks:
       network:
         ipv4_address: 10.5.0.122
