--- a/control_plane.env
+++ b/control_plane.env
@@ -1,67 +1,67 @@
-export MAGNETAR_PORT=5000
-export KUIPER_PORT=9001
-export KUIPER_WEBHOOK_PORT=9002
-export OORT_PORT=8000
-export IAM_PORT=8002
-export AGENT_QUEUE_PORT=50052
-export NATS_PORT=4222
-export ETCD_PORT=2379
-export KUIPER_ETCD_PORT=2379
-export NEO4J_BOLT_PORT=7687
-export NEO4J_HTTP_PORT=7474
-export VAULT_HTTP_PORT=8200
+MAGNETAR_PORT=5000
+KUIPER_PORT=9001
+KUIPER_WEBHOOK_PORT=9002
+OORT_PORT=8000
+IAM_PORT=8002
+AGENT_QUEUE_PORT=50052
+NATS_PORT=4222
+ETCD_PORT=2379
+KUIPER_ETCD_PORT=2379
+NEO4J_BOLT_PORT=7687
+NEO4J_HTTP_PORT=7474
+VAULT_HTTP_PORT=8200
 
-export MAGNETAR_HOSTNAME=magnetar
-export KUIPER_HOSTNAME=kuiper
-export OORT_HOSTNAME=oort
-export NATS_HOSTNAME=nats
-export ETCD_HOSTNAME=etcd
-export KUIPER_ETCD_HOSTNAME=kuiper_etcd
-export IAM_HOSTNAME=apollo
-export AGENT_QUEUE_HOSTNAME=agent_queue
+MAGNETAR_HOSTNAME=magnetar
+KUIPER_HOSTNAME=kuiper
+OORT_HOSTNAME=oort
+NATS_HOSTNAME=nats
+ETCD_HOSTNAME=etcd
+KUIPER_ETCD_HOSTNAME=kuiper_etcd
+IAM_HOSTNAME=apollo
+AGENT_QUEUE_HOSTNAME=agent_queue
 
-export NEO4J_HOSTNAME=neo4j
-export NEO4J_AUTH_ENABLED=false
-export NEO4J_DBNAME=neo4j
-export NEO4J_apoc_export_file_enabled=true
-export NEO4J_apoc_import_file_enabled=true
-export NEO4J_apoc_import_file_use__neo4j__config=true
-export NEO4J_PLUGINS="[\"apoc\"]"
+NEO4J_HOSTNAME=neo4j
+NEO4J_AUTH_ENABLED=false
+NEO4J_DBNAME=neo4j
+NEO4J_apoc_export_file_enabled=true
+NEO4J_apoc_import_file_enabled=true
+NEO4J_apoc_import_file_use__neo4j__config=true
+NEO4J_PLUGINS="[\"apoc\"]"
 
-export VAULT_HOSTNAME=vault
-export VAULT_ADDR=http://0.0.0.0
-export VAULT_KEYS_FILE=/etc/apollo/api_key.json
+VAULT_HOSTNAME=vault
+VAULT_ADDR=http://0.0.0.0
+VAULT_KEYS_FILE=/etc/apollo/api_key.json
 
-export DB_PASSWORD=c12s_password
-export DB_USERNAME=postgres
-export DB_NAME=postgres
-export DB_HOST=database
+DB_PASSWORD=c12s_password
+DB_USERNAME=postgres
+DB_NAME=postgres
+DB_HOST=database
 
-export QUASAR_HOSTNAME=quasar
-export QUASAR_PORT=9090
-export QUASAR_ETCD_HOSTNAME=quasar_etcd
-export QUASAR_ETCD_PORT=2379
+QUASAR_HOSTNAME=quasar
+QUASAR_PORT=9090
+QUASAR_ETCD_HOSTNAME=quasar_etcd
+QUASAR_ETCD_PORT=2379
 
-export SECRET_KEY="secret-key"
+SECRET_KEY="secret-key"
 
-export DB_CONSUL=consul
-export DBPORT_CONSUL=8500
+DB_CONSUL=consul
+DBPORT_CONSUL=8500
 
-export MERIDIAN_LISTEN_PORT=8000
-export MERIDIAN_ADDRESS=meridian:8000
-export GRAVITY_ADDRESS=agent_queue:50052
-export MERIDIAN_NEO4J_ADDRESS=meridian_neo4j:7687
-export MERIDIAN_NEO4J_DB_NAME=neo4j
-export MERIDIAN_NEO4J_BOLT_PORT=7687
-export MERIDIAN_NEO4J_HTTP_PORT=7474
-export MERIDIAN_NEO4J_AUTH_ENABLED=false
-export PULSAR_ADDRESS=pulsar:8000
-export PULSAR_ETCD_ADDRESS=pulsar_etcd:2379
-export PULSAR_LISTEN_ADDRESS=0.0.0.0:8000
+MERIDIAN_LISTEN_PORT=8000
+MERIDIAN_ADDRESS=meridian:8000
+GRAVITY_ADDRESS=agent_queue:50052
+MERIDIAN_NEO4J_ADDRESS=meridian_neo4j:7687
+MERIDIAN_NEO4J_DB_NAME=neo4j
+MERIDIAN_NEO4J_BOLT_PORT=7687
+MERIDIAN_NEO4J_HTTP_PORT=7474
+MERIDIAN_NEO4J_AUTH_ENABLED=false
+PULSAR_ADDRESS=pulsar:8000
+PULSAR_ETCD_ADDRESS=pulsar_etcd:2379
+PULSAR_LISTEN_ADDRESS=0.0.0.0:8000
 
-export PROMETHEUS_HEALTHCHECK_PORT=9090
-export PROMETHEUS_HEALTCHECK_URL=prometheus_healthcheck
+PROMETHEUS_HEALTHCHECK_PORT=9090
+PROMETHEUS_HEALTCHECK_URL=prometheus_healthcheck
 
-export APOLLO_DB_CONSISTENCY=one
-export APOLLO_DB_KEYSPACE=apollo
-export APOLLO_DB_CLUSTER=scylla
+APOLLO_DB_CONSISTENCY=one
+APOLLO_DB_KEYSPACE=apollo
+APOLLO_DB_CLUSTER=scylla
