--- a/node.yml
+++ b/node.yml
@@ -6,16 +6,18 @@ services:
     container_name: node_exporter
     command:
       - '--path.rootfs=/host'
-    network_mode: host
-    pid: host
+    # network_mode: host
+    # pid: host
+    privileged: true
     restart: unless-stopped
     volumes:
       - '/:/host:ro,rslave'
 
   cadvisor:
     image: gcr.io/cadvisor/cadvisor:v0.47.1
-    network_mode: host
-    pid: host
+    # network_mode: host
+    # pid: host
+    privileged: true
     volumes:
       - /:/rootfs:ro
       - /var/run:/var/run:rw
@@ -43,6 +45,7 @@ services:
       - CADVISOR_PORT=${CADVISOR_PORT}
       - APP_PORT=${STAROMETRY_HTTP_PORT}
       - NATS_PORT=${NATS_PORT}
+      # - NATS_URL=host.docker.internal
       - NATS_URL=${NATS_HOSTNAME}
       - GRPC_PORT=${STAROMETRY_GRPC_PORT}
     volumes:
