--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -193,7 +193,7 @@ services:
       - neo4jlogs:/logs
 
   nats:
-    image: nats:latest
+    image: nats:2.10.17-alpine
     container_name: nats
     ports:
       - ${NATS_PORT}:${NATS_PORT}
@@ -435,9 +435,6 @@ services:
       - PORT=8080
       - PROMETHEUS_URL=${PROMETHEUS_HEALTCHECK_URL}
       - PROMETHEUS_PORT=${PROMETHEUS_HEALTHCHECK_PORT}
-      - NATS_ADDRESS=${NATS_HOSTNAME}:${NATS_PORT}
-      - MAGNETAR_ADDRESS=${MAGNETAR_HOSTNAME}:${MAGNETAR_PORT}
-      - CLUSTER_METRICS_PUB_INTERVAL=${CLUSTER_METRICS_PUB_INTERVAL}
     networks:
       network:
         ipv4_address: 10.5.0.122
@@ -462,7 +459,7 @@ services:
       - '--path.rootfs=/host'
     # network_mode: host
     # pid: host
-    # privileged: true
+    privileged: true
     restart: unless-stopped
     volumes:
       - '/:/host:ro,rslave'
@@ -474,15 +471,15 @@ services:
     image: gcr.io/cadvisor/cadvisor:v0.47.1
     # network_mode: host
     # pid: host
-    # privileged: true
-    # volumes:
-    #   - /:/rootfs:ro
-    #   - /var/run:/var/run:rw
-    #   - /sys:/sys:ro
-    #   - /var/lib/docker/:/var/lib/docker:ro
-    #   - /var/lib/dbus/machine-id:/var/lib/dbus/machine-id:ro
-    #   - /var/run/docker.sock:/var/run/docker.sock:ro
-    #   - /etc/machine-id:/etc/machine-id:ro
+    privileged: true
+    volumes:
+      - /:/rootfs:ro
+      - /var/run:/var/run:rw
+      - /sys:/sys:ro
+      - /var/lib/docker/:/var/lib/docker:ro
+      - /var/lib/dbus/machine-id:/var/lib/dbus/machine-id:ro
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+      - /etc/machine-id:/etc/machine-id:ro
     networks:
       network:
         ipv4_address: 10.5.0.125
