--- a/node.env
+++ b/node.env
@@ -2,9 +2,9 @@ STAR_HOSTNAME=star
 STAR_PORT=11000
 STAR_ADDRESS=:11000
 
-NATS_HOSTNAME=10.0.2.2
+NATS_HOSTNAME=127.0.0.1
 NATS_PORT=4222
-NATS_ADDRESS=10.0.2.2:4222
+NATS_ADDRESS=127.0.0.1:4222
 
 REGISTRATION_REQ_TIMEOUT_MILLISECONDS=10000
 MAX_REGISTRATION_RETRIES=3
@@ -12,12 +12,12 @@ MAX_REGISTRATION_RETRIES=3
 NODE_ID_DIR_PATH=/etc/c12s
 NODE_ID_FILE_NAME=nodeid
 
-BIND_ADDRESS=10.13.13.102
+BIND_ADDRESS=127.0.0.1
 BIND_PORT=7946
 
-CADVISOR_ADDRESS=host.docker.internal
+CADVISOR_ADDRESS=cadvisor
 CADVISOR_PORT=8080
-NODE_EXPORTER_ADDRESS=host.docker.internal
+NODE_EXPORTER_ADDRESS=node_exporter
 NODE_EXPORTER_PORT=9100
 STAROMETRY_HTTP_PORT=8003
 STAROMETRY_GRPC_PORT=50055
